--- a/socket abuse/Dockerfile
+++ b/socket abuse/Dockerfile
@@ -1,5 +1,4 @@
 FROM python:3.8
-
-RUN apt-get update && apt-get install netcat && pip install requests
-
+RUN apt-get update && apt-get install -y ncat && pip install requests
+COPY dockerio.py /dockerio.py
 CMD ["/bin/bash"]
